# understudy

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
crates/core/: Cargo.toml
crates/core/src/: chat.rs  config.rs  context.rs  events.rs  filters.rs  lib.rs  store.rs
crates/core/src/comprehension/: ledger.rs  mod.rs  session_cache.rs
crates/core/src/models/: copilot.rs  http.rs  mod.rs  ollama.rs  openai.rs
crates/core/src/segments/: mod.rs
crates/core/src/sources/: antigravity.rs  claude_code.rs  codex.rs  copilot.rs  mod.rs  opencode.rs
crates/core/src/summary/: mod.rs
crates/core/tests/: port.rs
crates/understudy/: Cargo.toml
crates/understudy/src/: main.rs  tui.rs
docs/: antigravity-integration.md  architecture.md  claude-code-integration.md  codex-integration.md  comprehension-debt-kpi.md  providers.md  roadmap.md  rust-migration.md  ux-redesign.md
fixtures/: write_create.jsonl
src/understudy/: __init__.py  cli.py  config.py  context.py  events.py  store.py
src/understudy/chat/: session.py
src/understudy/models/: __init__.py  _filters.py  _openai.py  base.py  copilot.py  ollama.py  openai_compat.py
src/understudy/sources/: base.py  claude_code.py
src/understudy/summary/: deterministic.py  llm.py  thinking.py
src/understudy/tui/: app.py  chat.py  render.py  setup.py  thinking.py
tests/: test_claude_normalizer.py  test_keys.py  test_models_and_chat.py  test_thinking.py  test_tui_smoke.py
tests/fixtures/: sample_session.jsonl
