[workspace]
resolver = "2"
members = ["crates/core", "crates/understudy"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time", "sync"] }
futures = "0.3"
async-stream = "0.3"
regex = "1"
directories = "5"
thiserror = "1"
anyhow = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
