[project]
name = "understudy"
version = "0.0.1"
description = "Read-only side-car TUI that maintains a live understanding of a coding agent's session."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.60",
    "httpx>=0.27",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
understudy = "understudy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/understudy"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
