[package]
name = "understudy-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
regex = { workspace = true }
directories = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
