[package]
name = "understudy"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "understudy"
path = "src/main.rs"

[dependencies]
understudy-core = { path = "../core" }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
arboard = { version = "3", default-features = false } # text-only; drops image-data deps
